# Tasktui

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  main.py  pyproject.toml
.github/workflows/: ci.yml
over_ssh/: __init__.py  app.py  config.py  storage.py
tasktui/: __init__.py  __main__.py  app.py  config.py  models.py  storage.py
tests/: test_app_logic.py  test_config_storage.py  test_features.py
