[project]
name = "tasktui"
version = "0.1.0"
description = "Terminal task board with list, kanban, calendar, and timers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=6.7.1",
]
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tasktui"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/tk/Tasktui"
Source = "https://github.com/tk/Tasktui"
Issues = "https://github.com/tk/Tasktui/issues"

[project.scripts]
tasktui = "tasktui.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = ["asyncio: mark test as asyncio"]
